...
                  <IconButton
                    testID="edit"
                    icon="account-edit"
                    onPress={editMyAccount}
                  />
                  <IconButton
                    testID="write-album"
                    icon="pen"
                    onPress={editOnPress}
                  />
                </>
              ) : (
                followOnPress && (
...
