...
                  onPress={handleBack}
                />

                {user && album && user.id === album.userId && (
                  <>
                    <IconButton
                      testID="album-edit"
                      mode="contained-tonal"
                      icon="file-edit"
                      size={30}
                      onPress={() =>
                        router.replace({
                          pathname: '/album/editAlbum/[editId]',
...
