...
      {/* Photo */}
      <Card.Cover
        style={{
          height: 500,
          borderRadius: 0,
        }}
        testID="photo-image"
        source={{ uri: validUri }}
      />
      {/* Title and description */}
      <Card.Content style={{ paddingTop: spacing.md }}>
        {photoTitle && (
          <Text
...
