...
                headerLeft: () => '',
              }}
            />
            <Stack.Screen
              name="album/[albumId]"
              options={{
                title: 'Album',
                headerShown: true,
                headerLeft: () => '',
              }}
            />
            <Stack.Screen
              name="photos/[photoId]"
...
