...
              style={{
                flexDirection: 'row',
                alignItems: 'center',
              }}
            >
              <IconButton
                testID="comment-modal-icon-button"
                icon="comment"
                onPress={() => setIsCommentModalVisible(true)}
              />
              <Text testID="comment-count" style={{ fontSize: 16 }}>
                {commentCount}
              </Text>
...
