appId: com.final_project_winter_2025_eu_nagisa_riegler
---
- tapOn:
    id: write-album
- assertVisible: Create Album
- tapOn:
    id: input-album-title
- inputText:
    text: TestAlbum
- tapOn:
    id: input-description
- inputText:
    text: TestDescription
- tapOn:
    id: input-location
- inputText:
    text: TestLocation
- tapOn:
    id: button
    index: 1
- tapOn: Ok
- assertVisible:
    id: album-title
- tapOn:
    id: icon-button
    index: 2
- tapOn:
    id: select-photo-text
- tapOn: test-image1.jpg
- tapOn: 'Photo Title'
- inputText:
    text: 'Test Photo Title'
- tapOn: 'Description'
- inputText:
    text: 'Test Photo Decription'
- tapOn: Location
- inputText:
    text: Test Photo Location
- tapOn: Ok
